# open-roco-conn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prompt.md
open_roco_conn/: app.cpp  test.cpp
open_roco_conn/adf_protocol/: adf.cpp  adf.hpp  adf_cmds_type.hpp  adf_h5.cpp  adf_h5.hpp  adf_head.cpp  adf_head.hpp  adf_processors.cpp  adf_processors.hpp  angel_data_event.cpp  angel_data_event.hpp  bag_spirit_skill_data.cpp  byte_array.cpp  byte_array.hpp  byte_buffer.cpp  byte_buffer.hpp  define.cpp  define.hpp  free_pb_request_proxy.cpp  free_pb_request_proxy.hpp  p_bag_spirit_data.cpp  p_bag_spirit_data.hpp  p_bag_spirit_skill_data.cpp  p_bag_spirit_skill_data.hpp  p_detail_role_info.cpp  p_detail_role_info.hpp  p_return_code.cpp  p_return_code.hpp  p_role_info.cpp  p_role_info.hpp  p_spirit_value.cpp  p_spirit_value.hpp  property_des.cpp  property_des.hpp  protocol_helper.cpp  protocol_helper.hpp  req_fight_p.hpp
open_roco_conn/base/: app_const_def.hpp  constants.hpp  define.hpp  i_externalizable.hpp  property_des.cpp  property_des.hpp  rf_base.cpp  rf_base.hpp  unicode_translator.hpp
open_roco_conn/combat/: buff_affect.hpp  combat_net_cmds_type.hpp  combat_result_info.cpp  combat_result_info.hpp  combat_system_dp.cpp  combat_system_dp.hpp  combat_type.hpp  fight_result_p.hpp  open_combat_des.hpp  p_read_help.cpp  p_read_help.hpp  req_fight_p.hpp
open_roco_conn/data_processor/: adf_processors.cpp  adf_processors.hpp  i_data_processor.hpp  i_mul_data_processor.hpp  p_free_request.cpp  p_free_request.hpp  p_free_request2.cpp  p_free_request2.hpp
open_roco_conn/event/: angel_data_event.cpp  angel_data_event.hpp  angel_net_sys_event.cpp  angel_net_sys_event.hpp  angle_sys_event.hpp  base_event.cpp  base_event.hpp  callback_center.cpp  callback_center.hpp  event_dispatcher.cpp  event_dispatcher.hpp  event_key.hpp  notify_def.cpp  notify_def.hpp  tcp_conn_event.cpp  tcp_conn_event.hpp  timer.cpp  timer.hpp  timer_event.cpp  timer_event.hpp
open_roco_conn/fight/: fight_result_p.cpp  fight_result_p.hpp
open_roco_conn/global/: angle_event_manager.cpp  angle_event_manager.hpp  angle_main.cpp  angle_main.hpp  app_context.hpp  game_app.cpp  game_app.hpp  game_launch.cpp  game_launch.hpp  global.cpp  global.hpp  global_api.cpp  global_api.hpp  global_game_info.cpp  global_game_info.hpp  global_manager.cpp  global_manager.hpp  global_timer.cpp  global_timer.hpp  server_list_ui.cpp  server_list_ui.hpp  user_data.cpp  user_data.hpp  web_socket_client.cpp  web_socket_client.hpp
open_roco_conn/httpreq/: angel_url_loader.cpp  angel_url_loader.hpp  cgi2.cpp  cgi2.hpp  cgi_event.hpp  cgi_loader.cpp  cgi_loader.hpp  http_request.cpp  http_request.hpp  url_loader.cpp  url_loader.hpp
open_roco_conn/login/: adf_h5.cpp  adf_h5.hpp  login_data_body.cpp  login_data_body.hpp  login_data_processor.cpp  login_data_processor.hpp  login_data_repply.cpp  login_data_repply.hpp  server_info.hpp  server_keywords.hpp
open_roco_conn/net_processor/: net_processor.cpp  net_processor.hpp  tcp.cpp  tcp.hpp
open_roco_conn/person/: get_items_by_type_p.cpp  get_items_by_type_p.hpp  p_bag_spirit_data.cpp  p_bag_spirit_data.hpp  p_bag_spirit_skill_data.cpp  p_bag_spirit_skill_data.hpp  p_d_get_spirits_detail.cpp  p_d_get_spirits_detail.hpp  p_detail_role_info.cpp  p_detail_role_info.hpp  p_read_help.cpp  p_read_help.hpp  p_return_code.cpp  p_return_code.hpp  p_role_info.cpp  p_role_info.hpp  p_spirit_value.cpp  p_spirit_value.hpp  protocol_helper.cpp  protocol_helper.hpp  role_data.cpp  role_data.hpp  st_spirit_detail.cpp  st_spirit_detail.hpp  user_item.hpp
open_roco_conn/proto_bundle/: angel_message_box.cpp  angel_message_box.hpp  attach.cpp  attach.hpp  mail_base_info.cpp  mail_base_info.hpp  mail_box_proto.cpp  mail_box_proto.hpp  mail_box_proto_types.hpp  mail_detail.cpp  mail_detail.hpp  proto_bundle.hpp  proto_wire.cpp  proto_wire.hpp  zone_novice_revision.cpp  zone_novice_revision.hpp  zone_novice_revision_types.hpp
open_roco_conn/rebirth/: fix_temper_data_proxy.cpp  fix_temper_data_proxy.hpp  rebirth_config.hpp  rebirth_data_proxy.cpp  rebirth_data_proxy.hpp
open_roco_conn/receiver/: abstract_data_receiver.cpp  abstract_data_receiver.hpp  ar_data_receiver.cpp  ar_data_receiver.hpp  aw_data_receiver.cpp  aw_data_receiver.hpp  login_receiver.cpp  login_receiver.hpp
open_roco_conn/spirit/: net_define.hpp  p_bag_spirit_data.cpp  p_bag_spirit_data.hpp  p_bag_spirit_skill_data.cpp  p_bag_spirit_skill_data.hpp  p_spirit_value.cpp  p_spirit_value.hpp  spirit_equipment_info.cpp  spirit_equipment_info.hpp  spirit_info_processor.cpp  spirit_info_processor.hpp  spirit_properties.cpp  spirit_properties.hpp  spirit_skill_info.cpp  spirit_skill_info.hpp  st_spirit_info.cpp  st_spirit_info.hpp
open_roco_conn/spirit_book/: spirit_books_conf_loader.cpp  spirit_books_conf_loader.hpp
open_roco_conn/transmission/: tcp_transmission.cpp  tcp_transmission.hpp
open_roco_conn/websock/: adf_receivers.cpp  adf_receivers.hpp  angel_net_sys_event.hpp  angel_net_system.cpp  angel_net_system.hpp  angel_tcp_connection.cpp  angel_tcp_connection.hpp  linger_tcp_connection.cpp  linger_tcp_connection.hpp  tcp_transmission.cpp  tcp_transmission.hpp
open_roco_conn/world/: abstract_data_receiver.cpp  abstract_data_receiver.hpp  angle_sys_event.hpp  angle_world.cpp  angle_world.hpp  aw_data_receiver.cpp  aw_data_receiver.hpp
reference/: process.py
